--- a/web-app/src/main/resources/templates/inventory.html
+++ b/web-app/src/main/resources/templates/inventory.html
@@ -34,32 +34,61 @@
     </div>
     <nav>
         <ul>
-            <li id="nav-clients"><a href="/clients">
-                Клієнти
-            </a></li>
-            <li id="nav-routes"><a href="/routes">
-                Маршрути
-            </a></li>
-            <li id="nav-purchase"><a href="/purchase">
-                Закупівлі
-            </a></li>
-            <!--<li id="nav-sale"><a href="/sale">
-                Продажі
-            </a></li>-->
-            <li id="nav-containers"><a href="/containers">
-                Тари
-            </a></li>
+            <li id="nav-clients" class="dropdown">
+                <a href="#" onclick="return false;">
+                    Клієнти
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                <ul id="client-types-dropdown" class="dropdown-menu" style="display: none;">
+                </ul>
+            </li>
+            <li id="nav-routes" class="dropdown">
+                <a href="#" onclick="return false;">
+                    Маршрути
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                <ul id="route-types-dropdown" class="dropdown-menu" style="display: none;">
+                </ul>
+            </li>
+            <li id="nav-purchase" class="dropdown">
+                <a href="#" onclick="return false;">
+                    Закупівлі
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                <ul id="purchase-types-dropdown" class="dropdown-menu" style="display: none;">
+                </ul>
+            </li>
+            <li id="nav-containers" class="dropdown">
+                <a href="#" onclick="return false;">
+                    Тари
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                <ul id="container-types-dropdown" class="dropdown-menu" style="display: none;">
+                </ul>
+            </li>
             <li id="nav-inventory"><a class="selected-nav" href="/inventory">
                 Баланс тари
             </a></li>
+            <li id="nav-finance"><a href="/finance">
+                Фінанси
+            </a></li>
             <li id="nav-stock"><a href="/stock">
                 Склад
+            </a></li>
+            <li id="nav-declarant"><a href="/declarant">
+                Декларант
             </a></li>
             <li id="nav-analytics"><a href="/analytics">
                 Аналітика
             </a></li>
             <li id="nav-settings"><a href="/settings" class="setting-icon-block">
                 Налаштування
+            </a></li>
+            <li id="nav-administration"><a href="/administration">
+                Адміністрація
+            </a></li>
+            <li id="nav-profile"><a href="/profile">
+                Мій профіль
             </a></li>
             <li>
                 <a href="#" id="logout">
